--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-router": "^1.38.1",
+    "@tanstack/router-devtools": "^1.38.1",
+    "@tanstack/router-vite-plugin": "^1.38.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next-themes": "^0.3.0",
@@ -33,6 +36,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
